<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottleCreationFragment">

    <TextView
        android:id="@+id/a_add_bottle_textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_add_bottle_textview_bottle_name"
        app:layout_constraintBottom_toTopOf="@+id/a_add_bottle_text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/a_add_bottle_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/a_add_bottle_text_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/a_add_bottle_textview_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/a_add_bottle_textview_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_add_bottle_textview_bottle_price"
        app:layout_constraintBottom_toTopOf="@+id/a_add_bottle_text_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/a_add_bottle_text_price"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="168dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/a_add_bottle_button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/a_add_bottle_button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="40dp"
        android:background="@color/blueColor"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>