<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/a_row_bottle_textview_bottle_price_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/a_row_bottle_textview_bottle_price_descr"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/a_row_bottle_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a_row_bottle_textview_bottle_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/a_row_bottle_textview_bottle_price"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/a_row_bottle_textview_bottle_price_descr"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/a_row_bottle_icon"
        android:layout_width="91dp"
        android:layout_height="92dp"
        android:contentDescription="@string/bottle_icon"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bottle_icon" />

    <TextView
        android:id="@+id/a_row_bottle_textview_bottle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/a_row_bottle_textview_bottle_name"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/a_row_bottle_textview_bottle_name_descr"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a_row_bottle_textview_bottle_name_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/a_row_bottle_textview_bottle_name_descr"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/a_row_bottle_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/a_row_bottle_delete"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="delete button"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a_row_bottle_textview_bottle_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete_bottle" />

</androidx.constraintlayout.widget.ConstraintLayout>